--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "bmi",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://gustavkis.github.io/BMI/",
+  "homepage": " https://gustavkis.github.io/React_BMI/",
   "dependencies": {
-    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "gh": "^2.8.9",
-    "pages": "^0.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -29,9 +26,9 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
